Updated Test case document.

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -1,4 +1,4 @@
-webdriver.gecko.driver.path=C:\\Users\\sankarge\\Desktop\\dev\\geckodriver.exe
+webdriver.gecko.driver.path=C:\\geckodriver-v0.21.0-win64\\geckodriver.exe
 url=http://thawing-shelf-73260.herokuapp.com
 username=Testuser1
 password=Testuser1
